--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,12 @@ authors = [
 ]
 license = {text = "GPL-3.0"}
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
+
+dependencies = [
+    "numpy>=1.26.2",
+    "matplotlib>=3.7.4"
+]
 
 [project.urls]
 Homepage = "https://github.com/LuciferC-137/FiniteElementElec"
